Added generate API
